# tappa

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: docs.yml  wheels.yml
docs/: conf.py  getting-started.md  index.md
docs/_static/: custom.css
docs/api/: index.md
docs/user-guide/: index.md
native/: terra_module.cpp
src/tappa/: __init__.py  _helpers.py  aggregate.py  app.py  arith.py  cells.py  coerce.py  crosstab.py  crs.py  dispatch.py  distance.py  extent.py  extract.py  flowAccumulation.py  focal.py  freq.py  generics.py  geom.py  levels.py  math.py  merge.py  methods.py  names.py  plot.py  rast.py  rasterize.py  relate.py  sample.py  sds.py  show.py  spatvec.py  sprc.py  stats.py  subset.py  tessellate.py  tileApply.py  tile_apply.py  time.py  values.py  vect.py  (+3 more)
tests/: conftest.py  path_utils.py  test_aggregate.py  test_arith.py  test_cats.py  test_classify.py  test_crds.py  test_crop.py  test_crosstab.py  test_dispatch.py  test_distance.py  test_equal.py  test_expanse.py  test_extent.py  test_extract.py  test_flowaccumulation.py  test_focal.py  test_freq.py  test_geom.py  test_global.py  test_intersect_attrs.py  test_matrix_input.py  test_merge.py  test_misc_raster.py  test_misc_vector.py  test_multivariate.py  test_nc.py  test_patches.py  test_pitfinder.py  test_plot_overlays.py  test_project.py  test_rast_coerce.py  test_raster_local.py  test_raster_subset.py  test_rasterize.py  test_sample.py  test_sds_sprc.py  test_subst.py  test_tessellate.py  test_tile_apply.py  (+7 more)
