[build-system]
requires = ["scikit-build-core>=0.9,<0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"


[project]
# PyPI / pip name and import package: tappa (see wheel.packages → src/tappa/)
name = "tappa"
version = "0.0.1"
description = "tappa — Python bindings for the terra geospatial API"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.9"
# Core Python deps; the C++ extension links GDAL/GEOS/PROJ separately.
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.4"]

[project.urls]
Homepage = "https://github.com/rspatial/tappa"
Repository = "https://github.com/rspatial/tappa"


[tool.scikit-build]
# Let scikit-build-core find our CMakeLists.txt in the same directory.
cmake.build-type = "Release"

# Use Unix Makefiles by default so that Linux/macOS builds do not require
# ninja to be on PATH.  Old pip (22.x on Ubuntu 22.04) does not add the
# build-env bin/ to PATH, so the ninja PyPI package cannot be found by
# scikit-build-core 0.9.x even when it is listed in build-system.requires.
# cmake.generator was only added in scikit-build-core 0.10, so we must use
# cmake.args here.  Windows CI overrides this via SKBUILD_CMAKE_ARGS in
# [tool.cibuildwheel.windows] below (ninja is pre-installed on GH Actions).
cmake.args = ["-GUnix Makefiles"]

# The installed package is everything under src/tappa/
wheel.packages = ["src/tappa"]
wheel.license-files = []

# Make `pip install -e .` work: build the extension in-place.
build-dir = "build/{wheel_tag}"


[tool.scikit-build.cmake.define]
# Pass through any user-set variables (e.g. CMAKE_PREFIX_PATH for custom
# GDAL/GEOS installs) without hard-coding paths here.


[tool.cibuildwheel]
# CI publishes Windows wheels only (see .github/workflows/wheels.yml); Linux/macOS
# users typically use conda or system GDAL/GEOS/PROJ and build from source.
# Requires the terra C++ tree under terra_lib/ (see CMakeLists TERRA_SRC_DIR).
build = ["cp39-win_amd64", "cp310-win_amd64", "cp311-win_amd64", "cp312-win_amd64"]
test-command = "python -c \"import tappa; print('tappa', tappa.__file__)\""

[tool.cibuildwheel.windows]
# vcpkg is pre-installed on GitHub Actions windows-latest runners.
before-all = "vcpkg install gdal geos proj --triplet x64-windows"
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair --add-path C:/vcpkg/installed/x64-windows/bin -w {dest_dir} {wheel}"
# Override the Unix Makefiles default with Ninja for Windows (ninja.exe is
# pre-installed on GitHub Actions windows-latest runners).
# SKBUILD_CMAKE_ARGS replaces cmake.args from pyproject.toml entirely.
environment = { CMAKE_TOOLCHAIN_FILE = "C:/vcpkg/scripts/buildsystems/vcpkg.cmake", VCPKG_TARGET_TRIPLET = "x64-windows", SKBUILD_CMAKE_ARGS = "-GNinja" }
